--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 body {
     font-family: Arial;
     margin: 0;
+    background-color: #ddd;
     background: url('top.png') no-repeat;
     background-size: cover;
 }
