新版主页，增加自适应

--- a/index.html
+++ b/index.html
@@ -1,70 +1,72 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Hello - 晓橙</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-    box-sizing: border-box;
-}
-body {
-    font-family: Arial;
-    margin: 0;
-    background: url('top.png') no-repeat;
-    background-size: cover;
-}
-
-.header {
-    padding: 80px;
-    text-align: center;
-    color: white;
-}
-
-.header h1 {
-    font-size: 40px;
-}
-
-.main {   
-    width:80%;
-    background: #ffffff;
-    padding: 20px;
-    margin-left:auto;
-    margin-right:auto;
-}
-
-.footer {
-    padding: 20px;
-    text-align: center;
-    color: white;
-}
-
-@media screen and (max-width: 700px) {
-    .main {   
-        width:100%;
-    }
-}
-
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
+    <title>晓橙 | 一个热爱生活的咸鱼</title>
+    <meta name="description" content="我是晓橙，喜欢计算机的咸鱼一条，经常抽出空余时间学习各种语言编程以及知识，虽然懂得不多，但是这是我最喜欢的爱好吧。同时也喜欢各种游戏，沉浸在这个完美的虚拟世界，起码能暂时忘掉这充满回忆该死的现实.">
+    <meta name="keywords" content="晓橙,xiaoorange,xiao orange,xiao_orange">
+    <link rel="stylesheet" type="text/css" href="./css/font.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
+
 <body>
-
-<div class="header">
-  <h1>Hello</h1>
-  <p>我是晓橙</p>
-  <p>My name is Xiaoorange</p>
-</div>
-
-  <div class="main">
-      <h2 style="text-align: center;">自我介绍</h2>
-      <h5 style="text-align: center;">self-introduction</h5>
-      <p>&emsp;&emsp;你好！初次见面，自我介绍一下，我叫晓橙，来自四匀星界！<br>&emsp;&emsp;我拥有的技能多的数不清，比如我热爱信息技术，我会PHP HTML Python Java等编程语言，我也热爱现实的每一个活动，比如我也会电力工程，艺术创作等等......<br><br>&emsp;&emsp;曾经有很多人问我，为什么我会这么多的技能，在这些学习的背后难道我没有其他的原因吗？答案是有的：我曾经为了一个女孩去尝试学习这些知识，而仅仅只是为了逗她开心，去完成她和我一起希望完成的事情，这些就足够了，而我本身是一个只要认真学习就要学到精通的一个人，所以截至到今天我才会拥有这么多技能啊～<br>&emsp;&emsp;同时，我也是四匀星界的创始人之一，曾经的日子里我与很多小伙伴一起完成了许多属于我们自己的项目，比如StarWish of Game，而在后来，我们更是创造了几个新的项目，例如游戏《星之初始》，Hinet团队工作室等等......<br>&emsp;&emsp;我自己也创造了很多有点实用的应用程序，像是《自动绘画与上色的AI》《StarWishGameBox》等等，这些你可以在我的Github里面看到！<br>&emsp;&emsp;我自己的也有自己的性格，我会用全力去把快乐带给别人，让他人感受到科技的温暖！</p>
-  </div>
-
-<div class="footer">
-  <p>Copyright 2021 Xiaoorange All.right</p>
-</div>
-
+    <div id="box">
+        <div class="meBox">
+            <div class="headPhoto"></div>
+            <div class="meBox-title">
+                <p>I'm Xiao_orange</p>
+                <div class="fg"></div>
+            </div>
+            <div class="meBox-text">
+                <p>一条咸鱼<img src="./img/fish.png" alt="咸鱼" style="width: 20px; vertical-align: middle;"></p>
+                <p>热爱生活的一切事务</p>
+                <p>瞎折腾浪费时间最在行</p>
+            </div>
+            <div class="meBox-Button">
+                <a href="mailto:xiao_orange233@163.com">我的邮箱</a>
+                <a href="https://wpa.qq.com/msgrd?v=3&uin=3153664176&site=qq&menu=yes">企鹅聊天</a>
+            </div>
+        </div>
+        <div id="cmdBox">
+            <div class="cmd">
+                <div class="click">
+                    <div class="red"></div>
+                    <div class="yellow"></div>
+                    <div class="green"></div>
+                </div>
+                <div class="title">
+                    <span>xiaoorange - bash</span>
+                </div>
+                <div class="cmdText">
+                    <span style="color: rgb(0, 190, 0);">root@xiaoorange</span>
+                    <span style="color: blue;">~</span>
+                    <span style="color: rgb(39, 39, 39);">./weather.sh</span>
+                    <br />
+                    <iframe scrolling="no" src="https://tianqiapi.com/api.php?style=tc&skin=pitaya" frameborder="0"
+                        width="350" height="24" allowtransparency="true"></iframe>
+                    <br />
+                    <span style="color: rgb(0, 190, 0);">root@xiaoorange</span>
+                    <span style="color: blue;">~</span>
+                    <span style="color: rgb(39, 39, 39);">cat /me.txt</span>
+                    <p>爱好计算机，会去自学自己感兴趣的一切东西</p>
+                    <p>略懂H5开发；爱好折腾去解决一切问题</p>
+                    <p>这条路我才刚刚迈开了我的第一步</p>
+                    <p>路上的坎一定会非常多，但</p>
+                    <p>在我眼里</p>
+                    <p>没有什么问题是尝试不能解决的，如果有那就多尝试几次甚至上百次</p>
+                    <p>即使前方的路看似绝境，也要有硬生生给自己开出一条路的勇气</p>
+                    <span style="color: rgb(0, 190, 0);">root@xiaoorange</span>
+                    <span style="color: blue;">~</span>
+                    <span style="color: rgb(39, 39, 39);">sudo rm -rf /过去的自己/*</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="footer">
+        <p>© 2021 Xiao_orange | <a href="http://beian.miit.gov.cn">备案掉了，还在补...</a></p>
+        <p>DISIGN BY Xiao_orange</p>
+    </div>
 </body>
+
 </html>
