--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>晓橙 | 一个热爱生活的咸鱼</title>
     <meta name="description" content="我是晓橙，喜欢计算机的咸鱼一条，经常抽出空余时间学习各种语言编程以及知识，虽然懂得不多，但是这是我最喜欢的爱好吧。同时也喜欢各种游戏，沉浸在这个完美的虚拟世界，起码能暂时忘掉这充满回忆该死的现实.">
     <meta name="keywords" content="晓橙,xiaoorange,xiao orange,xiao_orange">
-    <link rel="stylesheet" type="text/css" href="./css/font.css">
-    <link rel="stylesheet" type="text/css" href="./css/main.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/Xiaoorange233/Xiaoorange233.github.io/css/font.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/Xiaoorange233/Xiaoorange233.github.io/css/main.css">
 </head>
 
 <body>
@@ -19,13 +19,13 @@
                 <div class="fg"></div>
             </div>
             <div class="meBox-text">
-                <p>一条咸鱼<img src="./img/fish.png" alt="咸鱼" style="width: 20px; vertical-align: middle;"></p>
+                <p>一条咸鱼<img src="https://cdn.jsdelivr.net/gh/Xiaoorange233/Xiaoorange233.github.io/img/fish.png" alt="咸鱼" style="width: 20px; vertical-align: middle;"></p>
                 <p>热爱生活的一切事务</p>
                 <p>瞎折腾浪费时间最在行</p>
             </div>
             <div class="meBox-Button">
                 <a href="mailto:xiao_orange233@163.com">我的邮箱</a>
-                <a href="https://wpa.qq.com/msgrd?v=3&uin=2043271366&site=qq&menu=yes">企鹅聊天</a>
+                <a href="https://wpa.qq.com/msgrd?v=3&uin=2043271366&site=qq&menu=yes" target="_blank">企鹅聊天</a>
             </div>
         </div>
         <div id="cmdBox">
@@ -64,7 +64,7 @@
         </div>
     </div>
     <div id="footer">
-        <p>© 2021 Xiao_orange | <a href="http://beian.miit.gov.cn">备案掉了，还在补...</a></p>
+        <p>© 2022 Xiao_orange </p>
         <p>DISIGN BY Xiao_orange</p>
     </div>
 </body>
