干脆全换了算了

--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>晓橙 | 一个热爱生活的咸鱼</title>
-    <meta name="description" content="我是晓橙，喜欢计算机的咸鱼一条，经常抽出空余时间学习各种语言编程以及知识，虽然懂得不多，但是这是我最喜欢的爱好吧。同时也喜欢各种游戏，沉浸在这个完美的虚拟世界，起码能暂时忘掉这充满回忆该死的现实.">
+    <meta name="description" content="这是晓橙的个人主页，懒得写简介了将就着看一下吧！">
     <meta name="keywords" content="晓橙,xiaoorange,xiao orange,xiao_orange">
-    <link rel="stylesheet" type="text/css" href="./css/font.css">
+	<link rel="stylesheet" type="text/css" href="./css/perload.css">
     <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 
 <body>
+	<div id="preloader" class="preloader">
+		<img src="./img/preloader.png" alt="">
+    </div>
     <div id="box">
         <div class="meBox">
             <div class="headPhoto"></div>
@@ -19,54 +22,62 @@
                 <div class="fg"></div>
             </div>
             <div class="meBox-text">
-                <p>一条咸鱼<img src="./img/fish.png" alt="咸鱼" style="width: 20px; vertical-align: middle;"></p>
-                <p>热爱生活的一切事务</p>
-                <p>瞎折腾浪费时间最在行</p>
+                <p>我叫晓橙，来自StarFours</p>
+                <p>目前是一名<b>学前教育</b>的大二狗</p>
+				<p>爱捣弄一些新鲜玩意儿</p>
+				<p>会网页设计和后端开发</p>
+				<p>只要钱够，啥都会！<p>
             </div>
             <div class="meBox-Button">
                 <a href="mailto:xiao_orange233@163.com">我的邮箱</a>
                 <a href="https://wpa.qq.com/msgrd?v=3&uin=2043271366&site=qq&menu=yes" target="_blank">企鹅聊天</a>
             </div>
         </div>
-        <div id="cmdBox">
-            <div class="cmd">
-                <div class="click">
-                    <div class="red"></div>
-                    <div class="yellow"></div>
-                    <div class="green"></div>
-                </div>
+        <div id="explorerBox">
+            <div class="explorer">
                 <div class="title">
-                    <span>xiaoorange - bash</span>
-                </div>
-                <div class="cmdText">
-                    <span style="color: rgb(0, 190, 0);">root@xiaoorange</span>
-                    <span style="color: blue;">~</span>
-                    <span style="color: rgb(39, 39, 39);">./weather.sh</span>
-                    <br />
+                    <span><img src="./img/file.png" style="width: 16px;vertical-align: middle;"> 自我介绍 - 记事本</span>
+					<div class="click">
+						<div class="red"></div>
+						<div class="light"></div>
+						<div class="light"></div>
+					</div>
+				</div>
+				<div class="top">
+					<span></span>
+					<span>文件</span>
+					<span>编辑</span>
+					<span>格式</span>
+					<span>视图</span>
+					<span>帮助</span>
+				</div>
+                <div class="explorerData">
                     <iframe scrolling="no" src="https://tianqiapi.com/api.php?style=tc&skin=pitaya" frameborder="0"
-                        width="350" height="24" allowtransparency="true"></iframe>
+                        width="350" height="18px" allowtransparency="true"></iframe>
                     <br />
-                    <span style="color: rgb(0, 190, 0);">root@xiaoorange</span>
-                    <span style="color: blue;">~</span>
-                    <span style="color: rgb(39, 39, 39);">cat /me.txt</span>
-                    <p>爱好计算机，会去自学自己感兴趣的一切东西</p>
-                    <p>略懂H5开发；爱好折腾去解决一切问题</p>
-                    <p>这条路我才刚刚迈开了我的第一步</p>
-                    <p>路上的坎一定会非常多，但</p>
-                    <p>在我眼里</p>
-                    <p>没有什么问题是尝试不能解决的，如果有那就多尝试几次甚至上百次</p>
-                    <p>即使前方的路看似绝境，也要有硬生生给自己开出一条路的勇气</p>
-                    <span style="color: rgb(0, 190, 0);">root@xiaoorange</span>
-                    <span style="color: blue;">~</span>
-                    <span style="color: rgb(39, 39, 39);">sudo rm -rf /过去的自己/*</span>
+					<p>没错，这么一个牛逼的人物</p>
+					<p>竟然是一名<B>学前教育</b>的大二苦逼狗</p>
+					<p>天妒英才啊！！！(bushi)</p>
+                    <p><br>主要爱好计算机，会去自学自己感兴趣的一切东西</p>
+                    <p>专注网页开发30年(虽然连30岁都不到)；爱好折腾去解决一切问题</p>
+                    <p><br>最主要是在我眼里</p>
+                    <p>没有什么问题是不能解决的，从哪里跌倒，就在那里多趴一会儿...</p>
+					<p><br>不是...</p>
+					<p><br><b>人生不如意事十之八九,但愿剩下一二能够绝处逢生</b></p>
                 </div>
             </div>
         </div>
     </div>
     <div id="footer">
         <p>© 2022 Xiao_orange </p>
-        <p>DISIGN BY Xiao_orange</p>
+        <p>DISIGN By Xiao_orange</p>
     </div>
 </body>
-
+<script>
+document.onreadystatechange = function(){
+    if(document.readyState == 'complete'){
+        document.getElementById("preloader").style.display="none";
+    }
+}
+</script>
 </html>
