新增博客进入入口

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 				<p>只要钱够，啥都会！<p>
             </div>
             <div class="meBox-Button">
-                <a href="mailto:xiao_orange233@163.com">我的邮箱</a>
-                <a href="https://wpa.qq.com/msgrd?v=3&uin=2043271366&site=qq&menu=yes" target="_blank">企鹅聊天</a>
+                <a href="./blog.html">进入博客</a>
+                <a href="https://wpa.qq.com/msgrd?v=3&uin=2043271366&site=qq&menu=yes" target="_blank">我的企鹅</a>
             </div>
         </div>
         <div id="explorerBox">
