集体修复重大BUG，替换新文件

--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
     <title>晓橙 | 一个热爱生活的咸鱼</title>
     <meta name="description" content="这是晓橙的个人主页，懒得写简介了将就着看一下吧！">
     <meta name="keywords" content="晓橙,xiaoorange,xiao orange,xiao_orange">
-	<link rel="stylesheet" type="text/css" href="./css/perload.css">
     <link rel="stylesheet" type="text/css" href="./css/main.css">
+	<script src="./js/preload.js"></script>
 </head>
 
 <body>
-	<div id="preloader" class="preloader">
-		<img src="./img/preloader.png" alt="">
-    </div>
     <div id="box">
         <div class="meBox">
             <div class="headPhoto"></div>
@@ -29,7 +26,7 @@
 				<p>只要钱够，啥都会！<p>
             </div>
             <div class="meBox-Button">
-                <a href="./blog.html">进入博客</a>
+                <a href="./blog.html">我的博客</a>
                 <a href="https://wpa.qq.com/msgrd?v=3&uin=2043271366&site=qq&menu=yes" target="_blank">我的企鹅</a>
             </div>
         </div>
