--- a/blog.html
+++ b/blog.html
@@ -39,6 +39,7 @@
 			<div class="bg-light p-5 rounded">
 				<h4 class="text-center">晓橙的Blog</h4>
 				<ul class="list-group" id="list"></ul>
+				<p class="text-center">到底了，看看别的吧...</p>
 			</div>
 		</div>
 		<div class="container my-5 py-3">
