修改 描述，标题，预加载动画

--- a/blog.html
+++ b/blog.html
@@ -3,12 +3,13 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-		<meta name="description" content="这是晓橙的个人主页，懒得写简介了将就着看一下吧！">
-		<meta name="keywords" content="晓橙,xiaoorange,xiao orange,xiao_orange">
+		<meta name="description" content="这是晓橙的Blog，懒得写简介了将就着看一下吧！">
+		<meta name="keywords" content="晓橙,xiaoorange,xiao orange,xiao_orange,Blog">
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="./css/perload.css">
 		<script src="./js/jquery.min.js"></script>
 		<script src="./js/preload.js"></script>
-		<title>晓橙 | 热爱生活的咸鱼</title>
+		<title>晓橙‘s Blog | 咸鱼的博客</title>
 		<style>
 			body{
 				background: url(./img/bg.jpg) center;
