--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>晓橙 | 一个热爱生活的咸鱼</title>
     <meta name="description" content="这是晓橙的个人主页，懒得写简介了将就着看一下吧！">
     <meta name="keywords" content="晓橙,xiaoorange,xiao orange,xiao_orange">
+	<link rel="stylesheet" type="text/css" href="./css/perload.css">
     <link rel="stylesheet" type="text/css" href="./css/main.css">
 	<script src="./js/preload.js"></script>
 </head>
