--- a/blog_body.html
+++ b/blog_body.html
@@ -8,35 +8,31 @@
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="./css/perload.css">
 		<script src="./js/jquery.min.js"></script>
-		<script src="./js/preload.js"></script>
 		<title>晓橙‘s Blog | 咸鱼的博客</title>
 		<style>
 			body{
-				background: url(./img/bg.jpg) center;
-				background-repeat: no-repeat;
-				background-attachment: fixed;
-				background-size: cover;
+				background: #e9ecef;
 			}
 		</style>
 	</head>
 	<body>
-		<div class="container mt-5">
-			<div class="row">
-				<div class="col-md-4 mx-auto bg-light p-5 rounded text-center">
-					<img src="https://q1.qlogo.cn/g?b=qq&nk=2043271366&s=640" class="img-thumbnail" width="128px" alt="">
-					<h4>晓橙的Blog's</h4>
-					<hr>
-					<p>你现在看到的是</p>
-					<p>我的Blog</p>
-					<p>随时都会更新一些新奇玩意儿</p>
-				</div>
-				<div class="col-md-7 mx-auto bg-light p-5 rounded" id="blog_body"></div>
-			</div>
+		<div id="preloader">
+			<img src="./img/preloader.png" height="64px" alt="">
 		</div>
-		<div class="container my-5 py-3">
-			<p class="text-center text-light">© 2022 Xiao_orange Disign By Xiao_orange</p>
+		<div class="container mt-5">
+				<div class="col-md-10 mx-auto bg-light p-2 p-md-5 rounded" id="blog_body"></div>
+		</div>
+		<div class="container my-5">
+			<p class="text-center">© 2022 Xiao_orange Disign By Xiao_orange</p>
 		</div>
 	</body>
 	<script src="./js/blog.js"></script>
+	<script>
+		document.onreadystatechange = function(){
+		    if(document.readyState == 'complete'){
+		        document.getElementById("preloader").style.display="none";
+		    }
+		}
+	</script>
 	<script>getbody();</script>
 </html>
