修复BUG，详见博客

--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,7 @@
 		<meta name="description" content="这是晓橙的Blog，懒得写简介了将就着看一下吧！">
 		<meta name="keywords" content="晓橙,xiaoorange,xiao orange,xiao_orange,Blog">
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+		<script src="//cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="./css/perload.css">
 		<script src="./js/jquery.min.js"></script>
 		<title>晓橙‘s Blog | 咸鱼的博客</title>
@@ -19,7 +20,7 @@
 		</style>
 	</head>
 	<body>
-		<div id="preloader">
+		<div id="preloader" class="preloader">
 			<img src="./img/preloader.png" height="64px" alt="">
 		</div>
 		<div class="container-fluid bg-light p-3">
@@ -40,7 +41,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-md-11 m-auto mt-5 bg-light p-4 rounded">
+		<div class="col-md-8 col-sm-11 m-auto mt-5 bg-light p-4 rounded">
 				<ul class="list-group" id="list"></ul>
 		</div>
 		<div class="container py-3">
