--- a/blog_body.html
+++ b/blog_body.html
@@ -6,6 +6,7 @@
 		<meta name="description" content="这是晓橙的Blog，懒得写简介了将就着看一下吧！">
 		<meta name="keywords" content="晓橙,xiaoorange,xiao orange,xiao_orange,Blog">
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+		<script src="//cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="./css/perload.css">
 		<script src="./js/jquery.min.js"></script>
 		<title>晓橙‘s Blog | 咸鱼的博客</title>
@@ -16,11 +17,14 @@
 		</style>
 	</head>
 	<body>
-		<div id="preloader">
+		<div id="preloader" class="preloader">
 			<img src="./img/preloader.png" height="64px" alt="">
 		</div>
+		<div class="container-fluid bg-light p-3">
+		    <h4 class="text-center" id="title">晓橙的Blog</h4>
+		</div>
 		<div class="container mt-5">
-				<div class="col-md-10 mx-auto bg-light p-2 p-md-5 rounded" id="blog_body"></div>
+				<div class="col-md-10 mx-auto bg-light p-2 p-md-5 rounded" id="blog_body"><p>别急，正在加载中...</p></div>
 		</div>
 		<div class="container my-5">
 			<p class="text-center">© 2022 Xiao_orange Disign By Xiao_orange</p>
