--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<div id="preloader">
+	<div id="preloader" class="preloader">
 		<img src="./img/preloader.png" height="64px" alt="">
 	</div>
     <div id="box">
