--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="晓橙,xiaoorange,xiao orange,xiao_orange">
 	<link rel="stylesheet" type="text/css" href="./css/perload.css">
     <link rel="stylesheet" type="text/css" href="./css/main.css">
+    <script data-ad-client="ca-pub-3597193075263615" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
