--- a/blog_body.html
+++ b/blog_body.html
@@ -5,38 +5,50 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
 		<meta name="description" content="这是晓橙的Blog，懒得写简介了将就着看一下吧！">
 		<meta name="keywords" content="晓橙,xiaoorange,xiao orange,xiao_orange,Blog">
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-		<script src="//cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="./css/perload.css">
-		<script src="./js/jquery.min.js"></script>
-		<title>晓橙‘s Blog | 咸鱼的博客</title>
+		<title>晓橙的Blog</title>
+		<link rel="stylesheet" type="text/css" href="./css/preload.css">
+		<link rel="stylesheet" type="text/css" href="./css/blog.css">
+		<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 		<style>
-			body{
-				background: #e9ecef;
-			}
+			.tap_center{margin-top: 5vh;color: #FAFAFA;text-align: center;font-size: 1.8rem;}.blink{animation: typedjsBlink 1s infinite;-webkit-animation: typedjsBlink 1s infinite;animation: typedjsBlink 1s infinite;}@keyframes typedjsBlink{50%{opacity:0.0}}@-webkit-keyframes typedjsBlink{0%{opacity:1}50%{opacity:0.0}100%{opacity:1}}
 		</style>
 	</head>
 	<body>
+		<!-- 预加载 -->
 		<div id="preloader" class="preloader">
 			<img src="./img/preloader.png" height="64px" alt="">
 		</div>
-		<div class="container-fluid bg-light p-3">
-		    <h4 class="text-center" id="title">晓橙的Blog</h4>
-		</div>
-		<div class="container mt-5">
-				<div class="col-md-10 mx-auto bg-light p-2 p-md-5 rounded" id="blog_body"><p>别急，正在加载中...</p></div>
-		</div>
-		<div class="container my-5">
-			<p class="text-center">© 2022 Xiao_orange Disign By Xiao_orange</p>
+		<!-- 头部 -->
+		<header style="height: 30vh;background-image: url(./img/blog.jpg);padding-bottom: 96px;">
+			<div class="navber">
+				<a href="/blog.html"><b>晓橙's Blog</b></a>
+				<div class="nav-link">
+					<a href="/index.html">首页</a>
+				</div>
+			</div>
+			<div class="tap_center">
+				<span id="blog_title">正在加载中 </span><span class="blink">_</span>
+			</div>
+		</header>
+		<!-- 主体部分 -->
+		<main>
+			<div class="box" style="margin-top: -128px;" id="blog_body">
+				别急，正在加载中
+			</div>
+		</main>
+		<!-- 尾部 -->
+		<div class="footer">
+			&copy;Copyright Xiao_orange All.right<br>本博客由晓橙完成构建，未经许可，不得私自搬运文章内容
 		</div>
 	</body>
 	<script src="./js/blog.js"></script>
 	<script>
+		// 原生js操作预加载
 		document.onreadystatechange = function(){
-		    if(document.readyState == 'complete'){
-		        document.getElementById("preloader").style.display="none";
-		    }
+			if(document.readyState == 'complete'){
+				document.getElementById("preloader").style.display="none";
+			}
 		}
+		getbody();
 	</script>
-	<script>getbody();</script>
 </html>
