--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
 		<title>晓橙的Blog</title>
 		<link rel="stylesheet" type="text/css" href="./css/preload.css">
 		<link rel="stylesheet" type="text/css" href="./css/blog.css">
+		<link rel="stylesheet" type="text/css" href="./css/icon.css">
 		<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 		<style>
 			.tap_center{margin-top: 35vh;color: #FAFAFA;text-align: center;font-size: 1.8rem;}.blink{animation: typedjsBlink 1s infinite;-webkit-animation: typedjsBlink 1s infinite;animation: typedjsBlink 1s infinite;}@keyframes typedjsBlink{50%{opacity:0.0}}@-webkit-keyframes typedjsBlink{0%{opacity:1}50%{opacity:0.0}100%{opacity:1}}
