--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
 		<meta name="description" content="这是晓橙的Blog，懒得写简介了将就着看一下吧！">
 		<meta name="keywords" content="晓橙,xiaoorange,xiao orange,xiao_orange,Blog">
-		<title>晓橙的Blog</title>
+		<title>咸鱼之家 | Xiaoorange's</title>
 		<link rel="stylesheet" type="text/css" href="./css/preload.css">
 		<link rel="stylesheet" type="text/css" href="./css/blog.css">
 		<link rel="stylesheet" type="text/css" href="./css/icon.css">
@@ -22,9 +22,10 @@
 		<!-- 头部 -->
 		<header style="height: 100vh;background-image: url(./img/blog.jpg);padding-bottom: 96px;">
 			<div class="navber">
-				<a href="/blog.html"><b>晓橙's Blog</b></a>
+				<a href="./blog.html"><b>Free Fish</b></a>
 				<div class="nav-link">
-					<a href="/index.html">首页</a>
+					<a href="./index.html"><i class="icon-home"></i>首页</a>
+					<a href="./blog.html"><i class="icon-write"></i>Blog</a>
 				</div>
 			</div>
 			<div class="tap_center">
