🎈 修复了移动端错位的BUG

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <p><br>最主要是在我眼里</p>
                     <p>没有什么问题是不能解决的，从哪里跌倒，就在那里多趴一会儿...</p>
 					<p><br>不是...</p>
-					<p><br><b>人生不如意事十之八九,但愿剩下一二能够绝处逢生</b></p>
+					<p><br><b>人生不如意事十之八九，但愿剩下一二能够绝处逢生</b></p>
 					<p><br></p>
                 </div>
             </div>
